--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         Telegram.WebApp.onEvent('themeChanged', setThemeClass);
         setThemeClass();
     </script>
-    <link href="css/app.css" rel="stylesheet">
+    <link href="app.css" rel="stylesheet">
     <title>Test App</title>
 </head>
 
@@ -35,8 +35,8 @@
     <div class="app-status-wrap">
         <div class="app-status js-status"></div>
     </div>
-    <script src="app/jquery.min.js"></script>
-    <script src="app/app.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="app.js"></script>
     <script>app.init();</script>
 </body>
 
